[package]
name = "rustyup"
version = "0.1.0"
authors = ["Andrei Nagacevschi <andrein_bio@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orbtk = { version="0.3.1-alpha1", path="../orbtk"}
orbtk-api = { path="../orbtk/crates/api", version="0.3.1-alpha2"}

[features]
debug = ["orbtk-api/debug"]