[package]
name = "rustyup"
version = "0.1.0"
authors = ["Andrei Nagacevschi <andrein_bio@yahoo.com>"]
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

[build-dependencies]
slint-build = "0.3.5"
